# JMGraphics

./: .gitattributes  .gitignore  CMakeLists.txt  JMG_shader.h  JMGraphics.h  LICENSE  README.md  THIRD_PARTY_LICENSES.md  THIRD_PARTY_NOTICES.md  cmake_install.cmake  doxygen.txt
docs/: _j_m_graphics_8h_source.html  class_j_m_graphics-members.html  class_j_m_graphics_1_1_buffer3_d-members.html  class_j_m_graphics_1_1_font-members.html  class_j_m_graphics_1_1_font.html  class_j_m_graphics_1_1_line_array.html  class_j_m_graphics_1_1_mesh.js  class_j_m_graphics_1_1_model.js  class_shader-members.html  functions.html  index.html  navtreedata.js
docs/html/: annotated_dup.js  class_j_m_graphics.html  class_j_m_graphics_1_1_buffer-members.html  class_j_m_graphics_1_1_buffer.html  class_j_m_graphics_1_1_buffer3_d.js  class_j_m_graphics_1_1_line_array-members.html  class_j_m_graphics_1_1_mesh-members.html  class_j_m_graphics_1_1_model-members.html  class_j_m_graphics_1_1_model.html  class_j_m_graphics_1_1_texture-members.html  class_j_m_graphics_1_1_texture.js  classes.html  files_dup.js  struct_j_m_graphics_1_1_mesh_1_1_vertex-members.html  (+1 more)
shaders/: fragment_2d_font.glsl  fragment_color.glsl  fragment_mesh.glsl  fragment_texture.glsl  vertex_2d_font.glsl  vertex_color.glsl  vertex_mesh.glsl  vertex_texture.glsl
src/: JMG_LineArray.cpp  JMG_Mesh.cpp  JMG_Model.cpp  JMG_drawingProperties.cpp  JMG_fontAndText.cpp  JMG_ioFunctions.cpp  JMG_shader.cpp  JMG_shapeFunctions.cpp  JMG_texturesAndBuffers.cpp  JMG_transformFunctions.cpp  JMG_windowManagement.cpp  JMGraphics.cpp
(+68 files in other folders)
